fix text-align

--- a/day7/styles.css
+++ b/day7/styles.css
@@ -27,18 +27,26 @@ label {
 }
 
 input, select, button {
-    width: 100%;
+    width: calc(100% - 20px);
     padding: 10px;
+    margin-bottom: 15px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    margin-bottom: 10px;
+    font-size: 16px;
+    text-align: center;
 }
 
 button {
+    width: 100%;
+    padding: 10px;
     background-color: #28a745;
-    color: white;
+    color: #fff;
     border: none;
+    border-radius: 5px;
+    font-size: 16px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin: 0.25rem;
 }
 
 button:hover {
@@ -48,5 +56,12 @@ button:hover {
 #result {
     margin-top: 20px;
     font-size: 1.2em;
-    color: #333;
+    /*color: #333; */
+    font-size: 2em;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #222;
+    color: #fff;
+    text-align: right;
+    border-radius: 5px;
 }
